--- a/ubuntu-test.yml
+++ b/ubuntu-test.yml
@@ -2,3 +2,7 @@
   ansible.builtin.file:
     path: /home/test0.txt
     state: touch
+- name: install package
+  apt:
+    name: python3-pip
+    state: present
