--- a/ubuntu-install-intel-ai-toolkit.yml
+++ b/ubuntu-install-intel-ai-toolkit.yml
@@ -16,7 +16,7 @@
         filename: oneapi
         repo: 'deb [signed-by=/etc/apt/keyrings/oneapi-archive-keyring.gpg] https://apt.repos.intel.com/oneapi all main'
     
-    - name: Install apache httpd  (state=present is optional)
+    - name: Install intel AI kit
         ansible.builtin.apt:
           name: intel-aikit
           state: present
