--- a/ubuntu-install-intel-ai-toolkit.yml
+++ b/ubuntu-install-intel-ai-toolkit.yml
@@ -16,3 +16,15 @@
         name: intel-aikit
         state: present
         update_cache: true
+
+- name: Set environment variables
+  hosts: localhost
+  connection: local
+  gather_facts: false
+
+  tasks:
+  - name: Add environment variable script to profile
+    copy:
+      dest: "/etc/profile.d/oneapi-env-vars"
+      content: |
+        source /opt/intel/oneapi/setvars.sh
