added local transport

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,6 @@
 [defaults] 
 log_path=/home/log
-inventory = /dev/null
-host_key_checking = False
+transport = local
 
 [privilege_escalation]
 become=true
