--- a/ubuntu-install-intel-ai-toolkit.yml
+++ b/ubuntu-install-intel-ai-toolkit.yml
@@ -65,9 +65,9 @@
   vars:
     user_name: demo_user
     repo_url: https://github.com/oneapi-src/oneAPI-samples.git
-    repo_dest: ~/demo
-    example_dir: ~/demo/oneAPI-samples/AI-and-Analytics/Features-and-Functionality/IntelPyTorch_InferenceOptimizations_AMX_BF16_INT8
-    requirements_file: ~/demo/oneAPI-samples/AI-and-Analytics/Features-and-Functionality/IntelPyTorch_InferenceOptimizations_AMX_BF16_INT8/requirements.txt
+    repo_dest: /home/demo
+    example_dir: /home/demo/oneAPI-samples/AI-and-Analytics/Features-and-Functionality/IntelPyTorch_InferenceOptimizations_AMX_BF16_INT8
+    requirements_file: /home/demo/oneAPI-samples/AI-and-Analytics/Features-and-Functionality/IntelPyTorch_InferenceOptimizations_AMX_BF16_INT8/requirements.txt
 
   tasks:
     - name: Create demo user
