--- a/ubuntu-install-intel-ai-toolkit.yml
+++ b/ubuntu-install-intel-ai-toolkit.yml
@@ -63,7 +63,7 @@
   connection: local
 
   vars:
-    user_name: demo_user
+    user_name: demo
     repo_url: https://github.com/oneapi-src/oneAPI-samples.git
     repo_dest: /home/demo
     example_dir: /home/demo/oneAPI-samples/AI-and-Analytics/Features-and-Functionality/IntelPyTorch_InferenceOptimizations_AMX_BF16_INT8
