change dest repo

--- a/ubuntu-install-intel-ai-toolkit.yml
+++ b/ubuntu-install-intel-ai-toolkit.yml
@@ -65,7 +65,7 @@
   vars:
     user_name: demo
     repo_url: https://github.com/oneapi-src/oneAPI-samples.git
-    repo_dest: /home/demo
+    repo_dest: /home/demo/oneAPI-samples
     example_dir: /home/demo/oneAPI-samples/AI-and-Analytics/Features-and-Functionality/IntelPyTorch_InferenceOptimizations_AMX_BF16_INT8
     requirements_file: /home/demo/oneAPI-samples/AI-and-Analytics/Features-and-Functionality/IntelPyTorch_InferenceOptimizations_AMX_BF16_INT8/requirements.txt
 
