--- a/ubuntu-install-intel-ai-toolkit.yml
+++ b/ubuntu-install-intel-ai-toolkit.yml
@@ -88,7 +88,8 @@
       copy:
         dest: "{{ repo_dest }}/run_demo.sh"
         content: |
+          #!/bin/bash
+          python -m pip install -r "{{ requirements_file }}"
           conda create --name user_pytorch --clone pytorch
           conda activate user_pytorch
-          python -m pip install -r "{{ requirements_file }}"
           python "{{ example_dir }}/IntelPyTorch_InferenceOptimizations_AMX_BF16_INT8.py"
