--- a/ubuntu-install-intel-ai-toolkit.yml
+++ b/ubuntu-install-intel-ai-toolkit.yml
@@ -92,4 +92,5 @@
           python -m pip install -r "{{ requirements_file }}"
           conda create --name user_pytorch --clone pytorch
           conda activate user_pytorch
+          python -m pip install transformers 
           python "{{ example_dir }}/IntelPyTorch_InferenceOptimizations_AMX_BF16_INT8.py"
