--- a/ubuntu-install-intel-ai-toolkit.yml
+++ b/ubuntu-install-intel-ai-toolkit.yml
@@ -81,3 +81,11 @@
           conda activate user_pytorch
           python "{{ demo_folder }}/IntelPyTorch_InferenceOptimizations_AMX_BF16_INT8.py"
         mode: a+x
+
+- name: Reboot server
+  hosts: localhost
+  connection: local
+  tasks:
+    - name: Run demo
+      shell: reboot
+
