--- a/ubuntu-install-intel-ai-toolkit.yml
+++ b/ubuntu-install-intel-ai-toolkit.yml
@@ -72,6 +72,7 @@
       ansible.builtin.file:
         path: "{{ repo_dest }}"
         state: directory
+        owner: "{{ user_name }}"
     - name: Add script to run demo to home dir
       copy:
         dest: "{{ repo_dest }}/run_demo.sh"
