--- a/ubuntu-install-intel-ai-toolkit.yml
+++ b/ubuntu-install-intel-ai-toolkit.yml
@@ -66,7 +66,7 @@
     user_name: alexander_goldberg
     repo_url: https://github.com/oneapi-src/oneAPI-samples.git
     repo_dest: /home/{{ user_name }}/oneAPI-samples
-    demo_folder: /home/{{ user_name }}/oneAPI-samples/AI-and-Analytics/Features-and-Functionality
+    demo_folder: {{ repo_dest }}/oneAPI-samples/AI-and-Analytics/Features-and-Functionality
   tasks:
     - name: Touch repo dest
       ansible.builtin.file:
@@ -78,7 +78,7 @@
         dest: "{{ repo_dest }}/run_demo.sh"
         content: |
           #!/bin/bash
-          git clone "{{ repo_url }}" "{{ repo_dest }}"
+          git clone "{{ repo_url }}" 
           python -m pip install -r "{{ demo_folder }}/requirements.txt"
           python -m pip install transformers 
           conda create --name user_pytorch --clone pytorch
