--- a/ubuntu-install-intel-ai-toolkit.yml
+++ b/ubuntu-install-intel-ai-toolkit.yml
@@ -81,9 +81,9 @@
           git clone "{{ repo_url }}" 
           python -m pip install -r "{{ demo_folder }}/requirements.txt"
           python -m pip install transformers 
-          conda create --name user_pytorch --clone pytorch
-          conda activate user_pytorch
-          python "{{ demo_folder }}/IntelPyTorch_InferenceOptimizations_AMX_BF16_INT8.py"
+          conda activate pytorch
+          cd "{{ demo_folder }}"
+          python IntelPyTorch_InferenceOptimizations_AMX_BF16_INT8.py
         mode: a+x
 
 - name: Reboot server
