--- a/ubuntu-install-intel-ai-toolkit.yml
+++ b/ubuntu-install-intel-ai-toolkit.yml
@@ -63,11 +63,14 @@
   connection: local
 
   vars:
-    user_name: alexander_goldberg
+    user_name: demo
     repo_url: https://github.com/oneapi-src/oneAPI-samples.git
     repo_dest: /home/{{ user_name }}/oneAPI-samples
     demo_folder: "{{ repo_dest }}/oneAPI-samples/AI-and-Analytics/Features-and-Functionality/IntelPyTorch_InferenceOptimizations_AMX_BF16_INT8"
   tasks:
+    - name: Create demo user
+      ansible.builtin.user:
+        name: {{ user_name }}
     - name: Touch repo dest
       ansible.builtin.file:
         path: "{{ repo_dest }}"
