--- a/ubuntu-install-intel-ai-toolkit.yml
+++ b/ubuntu-install-intel-ai-toolkit.yml
@@ -63,22 +63,13 @@
   connection: local
 
   vars:
-    user_name: demo
     repo_url: https://github.com/oneapi-src/oneAPI-samples.git
-    repo_dest: /home/{{ user_name }}/oneAPI-samples
-    demo_folder: "{{ repo_dest }}/oneAPI-samples/AI-and-Analytics/Features-and-Functionality/IntelPyTorch_InferenceOptimizations_AMX_BF16_INT8"
+    script_dest: /usr/local/bin
+    demo_folder: ./oneAPI-samples/AI-and-Analytics/Features-and-Functionality/IntelPyTorch_InferenceOptimizations_AMX_BF16_INT8
   tasks:
-    - name: Create demo user
-      ansible.builtin.user:
-        name: "{{ user_name }}"
-    - name: Touch repo dest
-      ansible.builtin.file:
-        path: "{{ repo_dest }}"
-        state: directory
-        owner: "{{ user_name }}"
-    - name: Add script to run demo to home dir
+    - name: Add script to run demo to bin
       copy:
-        dest: "{{ repo_dest }}/run_demo.sh"
+        dest: "{{ script_dest }}/run_demo.sh"
         content: |
           #!/bin/bash
           git clone "{{ repo_url }}" 
