--- a/ubuntu-fastchat.yml
+++ b/ubuntu-fastchat.yml
@@ -19,13 +19,23 @@
         name: fschat
         state: present
         executable: pip3
+    - name: Install pydantic version 1.10.10
+      pip:
+        name: pydantic==1.10.10
+        state: present
+        executable: pip3
+        
 
 - name: Serve Falcon on CPU 
   hosts: localhost
   connection: local
   tasks:
+    - name: Start web controller shell
+      shell: nohup python3 -m fastchat.serve.controller & sleep 10
     - name: Serve Falcon on CPU
-      shell: python3 -m fastchat.serve.model_worker --model-path lmsys/fastchat-t5-3b-v1.0 --device cpu --port 3000
+      shell: nohup python3 -m fastchat.serve.model_worker --model-path lmsys/fastchat-t5-3b-v1.0 --device cpu & sleep 10
+
+    
 
 
      # python3 -m fastchat.serve.test_message --model-name lmsys/fastchat-t5-3b-v1.0 
