--- a/ubuntu-fastchat.yml
+++ b/ubuntu-fastchat.yml
@@ -30,10 +30,11 @@
   hosts: localhost
   connection: local
   tasks:
+  
     - name: Start web controller shell
-      shell: nohup python3 -m fastchat.serve.controller & sleep 10
+      shell: nohup python3 -m fastchat.serve.controller </dev/null >/dev/null 2>&1 & 
     - name: Serve Falcon on CPU
-      shell: nohup python3 -m fastchat.serve.model_worker --model-path lmsys/fastchat-t5-3b-v1.0 --device cpu & sleep 10
+      shell: sleep 10 & nohup python3 -m fastchat.serve.model_worker --model-path lmsys/fastchat-t5-3b-v1.0 --device cpu </dev/null >/dev/null 2>&1 & 
 
     
 
