--- a/ubuntu-fastchat.yml
+++ b/ubuntu-fastchat.yml
@@ -31,7 +31,7 @@
   tasks:
   
     - name: Start web controller shell
-      shell: nohup python3 -m fastchat.serve.controller </dev/null >/dev/null 2>&1 & 
+      shell: nohup python3 -m fastchat.serve.controller --host 0.0.0.0 </dev/null >/dev/null 2>&1 & 
     - name: Serve Falcon on CPU
       shell: sleep 10 & nohup python3 -m fastchat.serve.model_worker --model-path lmsys/fastchat-t5-3b-v1.0 --device cpu </dev/null >/dev/null 2>&1 & 
 
