don't use apr fast

--- a/ubuntu-fastchat-worker.yml
+++ b/ubuntu-fastchat-worker.yml
@@ -32,12 +32,13 @@
       changed_when: false
     - name: Add Intel OneAPI repo
       shell: echo "deb [signed-by=/usr/share/keyrings/oneapi-archive-keyring.gpg] https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
-    
-    - name: Install intel base kit
-      shell: apt-fast update && DEBIAN_FRONTEND=noninteractive apt-fast install -yq intel-basekit
-    - name: Install intel AI kit
-      shell: DEBIAN_FRONTEND=noninteractive apt-fast -yq install intel-aikit
-
+    - name: Install pre-requisite packages
+      ansible.builtin.apt:
+        pkg:
+          - intel-basekit
+          - intel-aikit
+        state: present
+        update_cache: true
 - name: Install Miniconda
   hosts: localhost
   connection: local
