--- a/ubuntu-fastchat-worker.yml
+++ b/ubuntu-fastchat-worker.yml
@@ -35,4 +35,10 @@
         state: present
         executable: pip3
 
+- name: Run fastchat worker
+  hosts: localhost
+  connection: local
+  tasks:
+    - name: Start web controller shell
+      shell: nohup python3 -m fastchat.serve.model_worker --model-path lmsys/fastchat-t5-3b-v1.0 --device cpu --controller-address http://{{ c3_ip }}:21001 --worker-address http://{{ ansible_facts["ansible_default_ipv4"]["address"] }}:21002 --host {{ ansible_facts["ansible_default_ipv4"]["address"] }} --model-name xeon-3 </dev/null >/dev/null 2>&1 & 
 
