--- a/ubuntu-fastchat-worker.yml
+++ b/ubuntu-fastchat-worker.yml
@@ -11,7 +11,7 @@
         update_cache: true
     - name: put cmd in file
       copy:
-        dest: "/vars/cmd"
+        dest: "/var/cmd"
         content: |
           python3 -m fastchat.serve.model_worker --model-path lmsys/fastchat-t5-3b-v1.0 --device cpu --controller-address http://{{ c3_ip }}:21001 --worker-address http://{{ own_ip }}:21002 --host {{ own_ip }} --model-name xeon-3 </dev/null >/dev/null 2>&1 &
         mode: a+x
