lock fschat version

--- a/ubuntu/ubuntu-fastchat-worker.yml
+++ b/ubuntu/ubuntu-fastchat-worker.yml
@@ -22,7 +22,7 @@
   tasks:
     - name: Install fschat
       pip:
-        name: fschat
+        name: fschat==0.1.2
         state: present
         executable: pip3
     - name: Install plotly
