--- a/ubuntu/ubuntu-fastchat.yml
+++ b/ubuntu/ubuntu-fastchat.yml
@@ -16,7 +16,7 @@
   tasks:
     - name: Install fschat
       pip:
-        name: fschat
+        name: fschat==0.1.2
         state: present
         executable: pip3
     - name: Install plotly
