--- a/ubuntu/qat.yml
+++ b/ubuntu/qat.yml
@@ -37,6 +37,7 @@
         repo: https://github.com/intel/qatlib.git
         dest: /tmp/qat
     - name: Build qat
-      shell: /tmp/qat/autogen.sh #&& source ./configure --enable-service && make -j && make install
-
+      shell: autogen.sh #&& source ./configure --enable-service && make -j && make install
+      args:
+        chdir:  /tmp/qat
 
